Added interface Enemy

--- a/RogueLike/RogueLike.vcxproj.filters
+++ b/RogueLike/RogueLike.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="Creatures.h">
+    <ClInclude Include="Hero.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClCompile Include="RogueLike.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="Creatures.cpp">
+    <ClCompile Include="Heroes.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
